<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="subscription_controller">http://www.kosherrestaurantsgps.com/mobile_subscription_controller.v2.php</string>
    <!-- <string -->
    <!-- name="subscription_controller" -->
    <!-- >http://www.kosherrestaurantsgps.com/iphone_subscription_controller.php -->
    <!-- </string> -->
    <string name="versionName">1.6.1</string>
    <string name="platform">android</string>
    <string name="newVersionMessage">Thanks for downloading the latest version of Kosher Restaurants GPS.\r\n\r\nIn this version we\'ve focused on trying to make the app work with the latest devices and latest versions of Android OS.  We\'re hoping that you find the app more stable and faster.\r\n\r\nAs always, please let let us know if you\'d like to see any new features and of course, let us know if you have any issues with the app.\r\n\r\nIf you like our app, please take a minute to give us 5 stars in the play store.\r\n\r\n\r\n\r\n</string>
    <string name="noData">no records found</string>
    <string name="email">Send Feedback</string>
    <string name="filter">Filter List</string>
    <string name="sort">Sort List</string>
    <string name="settings">Settings</string>
    <string name="data_controller">http://www.kosherrestaurantsgps.com/mainlist_json.php</string>
    <string name="data_controller_v2">http://www.kosherrestaurantsgps.com/mainlist_json.v2.php</string>
    <string name="data_controller_v3">http://www.kosherrestaurantsgps.com/mainlist_json.v3.php</string>
    <string name="adrequest_controller_v1">http://www.kosherrestaurantsgps.com/mainads_json.v1.php</string>
    <string name="loyalty_controller_v1">http://www.kosherrestaurantsgps.com/loyalty_json.v1.php</string>
    <string name="hello">Hello World, Test2!</string>
    <string name="locationPrompt">Location</string>
    <string name="locationNearMe">Near Me</string>
    <string name="app_name">Kosher GPS</string>
    <string name="main_no_items">no records</string>
    <string name="sort_prompt">Sort by</string>

    <string-array name="sort_array">
        <item>Distance</item>
        <item>Name</item>
    </string-array>

    <string name="listType_prompt">Choose List</string>
    <string name="foodType_prompt">Choose Food Type</string>

    <string-array name="listType_array">
        <item>Restaurants</item>
        <item>Minyanim</item>
        <item>Mikvahs</item>
    </string-array>
    <string-array name="foodType_array">
        <item>All</item>
        <item>Meat</item>
        <item>Dairy</item>
        <item>Other</item>
    </string-array>

    <string name="filterPrompt">Filter</string>
    <string name="mapPrompt">Map</string>
    <string name="currentLocationPrompt">Near Me</string>
    <string name="customLocationPrompt">Any Location</string>
    <string name="addressHint">1 Nice Street City, State 12345</string>
    <string name="gotoButton">GoTo</string>
    <string name="okButton">OK</string>
    <string name="cancelButton">Cancel</string>
    <string name="doneButton">Done</string>
    <string name="unrecognizedLocationMessage">The location you entered is not recognized. Please, try again.</string>

    <string-array name="state_list">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Marianas Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
        <item>Ontario</item>
        <item>British Columbia</item>
        <item>Alberta</item>
        <item>Saskatchewan</item>
        <item>Manitoba</item>
        <item>Quebec</item>
        <item>New Brunswick</item>
        <item>Nova Scotia</item>
        <item>New Foundland</item>
        <item>Prince Edward Island</item>
    </string-array>

    <string name="details_restaurantMessage">        Please call to verify hashgacha and hours of operation. Show app to
        store
        manager to receive a discount.</string>
    <string name="details_message">        Please call to verify hours of operation.</string>
    <string name="locationFilterLabel">        Name (contains)</string>
    <string name="deepDiscountLabel">        Deep Discount</string>
    <string name="enhancedDiscountLabel">        Enhanced Discount</string>
    <string name="discountFilterLabel">        Discounts Only</string>
    <string name="discountFilterPrompt">        Discount Prompt</string>
    <string name="distanceFilterLabel">        Distance (mi.)</string>
    <string name="foodTypeFilterLabel">        Food Type</string>
    <string name="distanceOperatorPrompt">        Distance Operator</string>

    <string-array name="booleanOptions">
        <item>true</item>
        <item>false</item>
    </string-array>

    <string name="filterClearButton">        Clear</string>
    <string name="no_GPS_Message">        You\'re GPS is not enabled. Some features in the KosherApp are not
        available without a GPS.</string>
    <string name="directionsUnavailableMessage">        Sorry, but the directions feature is not available without the GPS
        feature enabled.</string>
    <string name="nearMeUnavailableMessage">        I cannot currently fin locations that are nearest to you. Please
        specify a location.</string>
    <string name="welcome">Welcome to the Store Front!</string>
    <string name="billing_not_supported_title">Can\'t make purchases</string>
    <string name="billing_not_supported_message">The Market billing
        service is not available at this time. You can
        continue to use this app but
        you
        won\'t be able to make purchases.</string>
    <string name="cannot_connect_title">Can\'t connect to Market</string>
    <string name="cannot_connect_message">This app cannot connect to Market.
        Your version of Market may be out
        of date.
        You can continue to use this app but you
        won\'t be able
        to make purchases.</string>
    <string name="restoring_transactions">Restoring transactions</string>
    <string name="learn_more">Learn more</string>
    <string name="help_url" formatted="false">http://market.android.com/support/bin/answer.py?answer=1050566&amp;hl=%lang%&amp;dl=%region%</string>
    <string name="buy">Buy</string>
    <string name="select_item">Select an item</string>
    <string name="items_for_sale">Items for sale</string>
    <string name="items_you_own">Items you own</string>
    <string name="recent_transactions">Recent activity</string>
    <string name="kosher_app">kosher.app.subscription.renewal</string>

    <!-- The following are reserved skus defined by Market for testing. -->
    <string name="android_test_canceled">android.test.canceled</string>
    <string name="android_test_purchased">android.test.purchased</string>
    <string name="android_test_item_unavailable">android.test.item unavailable</string>
    <string name="android_test_refunded">android.test.refunded</string>
    <string name="subscription_expired">        You\'re subscription is expired. Please purchase a new
        subscription.</string>

</resources>