<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="4dip"
    android:paddingRight="4dip"
    android:background="@color/screen_background"
>

    <TextView
        android:id="@+id/billing_supported"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error_message" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:text="@string/subscription_expired" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:text="@string/items_for_sale" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    >
        <Spinner
            android:id="@+id/item_choices"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:prompt="@string/select_item" />
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="10dp"
        android:text="@string/items_you_own" />
    <ListView
        android:id="@+id/owned_items"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:paddingBottom="4dip"
    >
    </ListView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="10dp"
        android:text="@string/recent_transactions" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    >
        <TextView
            android:id="@+id/log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:bufferType="spannable"
            android:textColor="@android:color/black" />
    </ScrollView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
    >
        <Button
            android:id="@+id/buy_button"
            android:background="@drawable/ic_launcher_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginRight="5dp"
            android:text="@string/buy" />
        <Button
            android:id="@+id/storeFrontOKButton"
            android:background="@drawable/ic_launcher_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doneButton"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginRight="5dp" />
        <Button
            android:id="@+id/storeFrontCancelButton"
            android:background="@drawable/ic_launcher_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelButton"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
        >
        </Button>
    </LinearLayout>
</LinearLayout>
