<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:visibility="invisible"
        >
        </RadioButton>
        <RadioButton
            android:id="@+id/currentLocationRadio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/currentLocationPrompt"
        >
        </RadioButton>
        <RadioButton
            android:id="@+id/customLocationRadio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/customLocationPrompt"
        >
        </RadioButton>
    </RadioGroup>
    <EditText
        android:id="@+id/locationInputEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addressHint"
        android:enabled="false"
        android:selectAllOnFocus="true"
    >
    </EditText>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    >
        <Button
            android:id="@+id/cancelButtonLocationChooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_launcher_selector"
            android:text="@string/cancelButton"
            android:textStyle="bold"
            android:textColor="@color/white"
        >
        </Button>
        <Button
            android:id="@+id/okButtonLocationChooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_launcher_selector"
            android:text="@string/okButton"
            android:textStyle="bold"
            android:textColor="@color/white"
        >
        </Button>
    </LinearLayout>
</LinearLayout>