<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:id="@+id/locationFilterSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/locationFilterLabel"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_gravity="left|center_vertical"
                android:text="@string/locationFilterLabel" >
            </TextView>

            <EditText
                android:id="@+id/locationFilterValue"
                android:layout_width="120dp"
                android:layout_height="wrap_content" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/discountFilterSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/discountFilterLabel"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_gravity="left|center_vertical"
                android:text="@string/discountFilterLabel" >
            </TextView>

            <CheckBox
                android:id="@+id/discountFilterCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" >
            </CheckBox>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/distanceFilterSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/distanceFilterLabel"
                android:layout_width="110dp"
                android:layout_height="20dp"
                android:layout_gravity="left|center_vertical"
                android:text="@string/distanceFilterLabel" >
            </TextView>

            <EditText
                android:id="@+id/distanceFilterValue"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:numeric="integer|decimal" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/foodTypeFilterSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/foodTypeFilterLabel"
                android:layout_width="110dp"
                android:layout_height="20dp"
                android:layout_gravity="left|center_vertical"
                android:text="@string/foodTypeFilterLabel" >
            </TextView>

            <Spinner
                android:id="@+id/foodTypeSpinner"
                style="@style/spinner_layout"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:prompt="@string/foodType_prompt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/filterButtonSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/filterClearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_launcher_selector"
                android:text="@string/filterClearButton"
                android:textColor="@color/white"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/filterCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_launcher_selector"
                android:text="@string/cancelButton"
                android:textColor="@color/white"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/filterOKButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/ic_launcher_selector"
                android:text="@string/okButton"
                android:textColor="@color/white"
                android:textStyle="bold" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>