<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_vertical"
>
    <LinearLayout
        android:id="@+id/deepDiscountSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
    >
        <TextView
            android:id="@+id/deepDiscountLabel"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_gravity="left|center_vertical"
            android:text="@string/deepDiscountLabel"
        >
        </TextView>
        <CheckBox
            android:id="@+id/deepDiscountCheckBox"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        >
        </CheckBox>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/enhancedDiscountSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
    >
        <TextView
            android:id="@+id/enhancedDiscountLabel"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_gravity="left|center_vertical"
            android:text="@string/enhancedDiscountLabel"
        >
        </TextView>
        <CheckBox
            android:id="@+id/enhancedDiscountCheckBox"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        >
        </CheckBox>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/settingsButtonSection"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
    >
        <Button
            android:id="@+id/settingsClearButton"
            android:background="@drawable/ic_launcher_selector"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:text="@string/filterClearButton"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"
        >
        </Button>
        <Button
            android:id="@+id/settingsCancelButton"
            android:background="@drawable/ic_launcher_selector"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:text="@string/cancelButton"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"
        >
        </Button>
        <Button
            android:id="@+id/settingsOKButton"
            android:background="@drawable/ic_launcher_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/okButton"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
        >
        </Button>
    </LinearLayout>
</LinearLayout>