<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:visibility="visible" >

    <LinearLayout
        android:id="@+id/mainHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="0dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/locationPrompt"
                android:textColor="@color/dark_grey"
                android:textSize="11dp" />

            <Spinner
                android:id="@+id/locationEditText"
                style="@style/spinner_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/locationNearMe"
                android:textSize="11dp" />
        </LinearLayout>

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/refresh_button" >
        </Button>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/listTypeTextView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/listType_prompt"
                android:textColor="@color/dark_grey"
                android:textSize="11dp" />

            <Spinner
                android:id="@+id/listTypeSpinner"
                style="@style/spinner_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/listType_prompt" />
        </LinearLayout>
    </LinearLayout>

    <WebView
        android:id="@+id/imageAdWebView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true" />

    <ListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/imageAdWebView"
        android:layout_below="@id/mainHeader"
        android:cacheColorHint="#00000000" />

    <TextView
        android:id="@id/android:empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/imageAdWebView"
        android:layout_below="@id/mainHeader"
        android:background="@color/white"
        android:text="@string/noData" />

</RelativeLayout>